linux-tools (3.16-4) UNRELEASED; urgency=medium

  * [x86] Add hyperv-daemons package, thanks to Hideki Yamane (closes: #782761)
    - Apply upstream bug fixes up to Linux 4.1 inclusive
  * Adjust for migration to git:
    - Update .gitignore files
    - debian/control: Update Vcs-* fields
    - debian/rules: Exclude .git from maintainerclean rule

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 04 Nov 2015 12:49:40 +0000

linux-tools (3.16-3) unstable; urgency=medium

  * linux-tools: Fix build configuration to avoid linking perf with libbfd
    (Closes: #763002)
  * linux-tools: Add a check that perf is not linked with libbfd
  * [arm64] Enable building linux-tools, thanks to Steve Capper
    (Closes: #771340)

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 02 Feb 2015 22:05:59 +0000

linux-tools (3.16-2) unstable; urgency=medium

  * linux-kbuild: Change the type headers used for devicetable-offsets.c
    to avoid depending on UAPI headers or <linux/types.h>.  This really
    closes: #754213.  It also fixes modpost handling of input device IDs
    when host and target have differing word size.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 09 Sep 2014 13:21:05 +0100

linux-tools (3.16-1) unstable; urgency=medium

  * New upstream release

  [ Mauricio Faria de Oliveira ]
  * [ppc64el] Build linux-tools binary package (Closes: #754213)

  [ Ben Hutchings ]
  * linux-kbuild: Build and install recordmcount and recordmcount.pl,
    needed for kernels with DYNAMIC_FTRACE enabled
  * linux-kbuild: Fix recordmcount dependency for OOT modules

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 08 Sep 2014 18:45:06 +0100

linux-tools (3.16~rc7-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * genorig: Include new directory for usbip UAPI header
  * debian/control: Update Build-Depends for usbip switching from
    libsysfs to libudev
  * perf: Build with V=1 as V=2 no longer works