@@ -6,6 +6,8 @@ linux-tools (3.16-4) UNRELEASED; urgency=medium
     - Update .gitignore files
     - debian/control: Update Vcs-* fields
     - debian/rules: Exclude .git from maintainerclean rule
+  * debian/lib/python/debian_linux/debian.py: Change package version regexp
+    to match linux package
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 04 Nov 2015 12:49:40 +0000
 
